Bug 653230, add panels with focusable elements into the document tab navigation order, r=smaug